# Fuzzy_string_matching

./: CMakeLists.txt  README.MD
DEMO/: algorithm.avi  immediately.avi  this_is_a_test_sentence.avi
Sources/: fsm.cpp  fsm.h  main.cpp
